# swagger_server/controllers/clients_controller.py
@@ -4,17 +4,6 @@ import six
 from swagger_server import util
 
 
-def add_client():  # noqa: E501
-    """Add a new client
-
-     # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
 def complete_form_for_client(user_id, form_id):  # noqa: E501
     """Modify the form with the formId
 
@@ -47,19 +36,6 @@ def find_form_for_client(user_id, form_id):  # noqa: E501
 
 def get_all_forms_for_client(user_id):  # noqa: E501
     """Find all forms assigned to a client
-
-    Returns a single pet # noqa: E501
-
-    :param user_id: ID of owner to return
-    :type user_id: int
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
-def get_client_by_id(user_id):  # noqa: E501
-    """Find client by userId
 
     Returns a single pet # noqa: E501
 
