# swagger_server/models/question_options.py
@@ -1,88 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class QuestionOptions(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, index: str=None, description: str=None):  # noqa: E501
-        """QuestionOptions - a model defined in Swagger
-
-        :param index: The index of this QuestionOptions.  # noqa: E501
-        :type index: str
-        :param description: The description of this QuestionOptions.  # noqa: E501
-        :type description: str
-        """
-        self.swagger_types = {
-            'index': str,
-            'description': str
-        }
-
-        self.attribute_map = {
-            'index': 'index',
-            'description': 'description'
-        }
-        self._index = index
-        self._description = description
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'QuestionOptions':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Question_options of this QuestionOptions.  # noqa: E501
-        :rtype: QuestionOptions
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def index(self) -> str:
-        """Gets the index of this QuestionOptions.
-
-
-        :return: The index of this QuestionOptions.
-        :rtype: str
-        """
-        return self._index
-
-    @index.setter
-    def index(self, index: str):
-        """Sets the index of this QuestionOptions.
-
-
-        :param index: The index of this QuestionOptions.
-        :type index: str
-        """
-
-        self._index = index
-
-    @property
-    def description(self) -> str:
-        """Gets the description of this QuestionOptions.
-
-
-        :return: The description of this QuestionOptions.
-        :rtype: str
-        """
-        return self._description
-
-    @description.setter
-    def description(self, description: str):
-        """Sets the description of this QuestionOptions.
-
-
-        :param description: The description of this QuestionOptions.
-        :type description: str
-        """
-
-        self._description = description
